feat: two routes implemented
